Added definition of variables in config file